--- a/KubernetesWebView/README
+++ b/KubernetesWebView/README
@@ -4,7 +4,7 @@ doc officielle : https://kube-web-view.readthedocs.io/en/latest/
 
 installation :
 $ git clone https://codeberg.org/hjacobs/kube-web-view
-$ kubectl apply -f kube-web-view/deploy
+$ kubectl apply -k kube-web-view/deploy
 
 $ kubectl port-forward service/kube-web-view 8080:80
 
